--- a/mystyle.css
+++ b/mystyle.css
@@ -9,3 +9,25 @@ aside{
     float: right;
     background-color: lightgrey;
 }
+
+nav {
+  margin: 20px;
+  display: inline-block;
+  padding: 16px 20px;
+  margin-right: 20px;
+  color: #222;
+  text-decoration: none;
+  font-size: 1.2em;
+  transition: 
+    background 0.2s,
+    color 0.2s,
+    transform 0.2s;
+  border-radius: 2px;
+}
+nav:hover,
+nav:focus {
+  background: #e67e22;
+  color: #fff;
+  transform: scale(1.08) translateY(-2px);
+  outline: none;
+}
