--- a/mystyle.css
+++ b/mystyle.css
@@ -1,33 +1,71 @@
 img{
-    width: 80px;
-    height: 100px;
-    border: 2px solid brown;
-    border-radius: 100px;
+width: 150px;
+height: 150px;
+border: 2px solid brown;
+border-radius: 100px;
+margin-top: 30px;
+margin-right: 20px;
+ 
 }
 aside{
-    margin-bottom: 50px;
-    float: right;
-    background-color: lightgrey;
+margin-top: -150px;
+float: right;
+ 
 }
-
-nav {
-  margin: 20px;
-  display: inline-block;
-  padding: 16px 20px;
-  margin-right: 20px;
-  color: #222;
-  text-decoration: none;
-  font-size: 1.2em;
-  transition: 
-    background 0.2s,
-    color 0.2s,
-    transform 0.2s;
-  border-radius: 2px;
+nav{
+font-family: Arial, Helvetica, sans-serif;
+text-align: right;
+margin-right: 30px;
+margin-top: -40px;
+margin-bottom: 20px;
+transition: 1s;
 }
-nav:hover,
-nav:focus {
-  background: #e67e22;
-  color: #fff;
-  transform: scale(1.08) translateY(-2px);
-  outline: none;
+nav a{
+text-decoration: none;
+color: rgb(0, 0, 0);
+}
+nav a:hover{
+color: rgb(0, 0, 255);
+transition: 0.5s;
+}
+a{
+margin-left: 20px;
+}
+header{
+font-family: Arial, Helvetica, sans-serif;
+margin-left: 30px;
+font-size: medium;
+}
+body{
+background-color: rgb(255, 255, 255);
+width: 50%;
+height: 450px;
+margin: auto;
+margin-top: 100px;
+margin-right: 25%;
+border: 2px solid rgb(158, 158, 158);
+border-radius: 50px;
+padding: 20px;
+}
+section{
+font-family: Arial, Helvetica, sans-serif;
+margin-left: 30px;
+margin-right: 30px;
+text-align: justify;
+}
+footer{
+font-family: Arial, Helvetica, sans-serif;
+text-align: left;
+margin-top: 50px;
+margin-bottom: 20px;
+margin-left: 30px;
+}
+input{
+ 
+background-color: blue;
+border: 1px solid blue;
+color: white;
+border-radius: 10px;
+width: 100px;
+height: 30px;
 }
